Update des microservice avec la gestion des images
