# Back-end/User-API/src/models/newsletter.model.ts
@@ -4,12 +4,14 @@ export default class NewsletterModel {
     body: string;
     creationDate: Date;
     isSent: boolean;
+    newsletterImage: string;
 
-    constructor(name: string, title: string, body: string, creationDate: Date, isSent: boolean) {
+    constructor(name: string, title: string, body: string, creationDate: Date, isSent: boolean, newsletterImage: string) {
         this.name = name;
         this.title = title;
         this.body = body;
         this.creationDate = creationDate;
         this.isSent = isSent;
+        this.newsletterImage = newsletterImage;
     }
 }
