# Back-end/User-API/src/routes/event.route.ts
@@ -1,15 +1,17 @@
 import { Router } from "express";
 import EventController from "../controllers/event.controller";
+import { verifyToken } from "../utils/jwt.utils"
+import { upload } from "../utils/multer.utils";
 
 const router = Router();
 const eventController = new EventController();
 
 // EVENTS
-router.get('', eventController.getEvents);
-router.get('/:id', eventController.getEventById);
-router.post('', eventController.createEvent);
-router.put('/:id', eventController.updateEvent);
-router.delete('/:id', eventController.deleteEvent);
+router.get('', verifyToken, eventController.getEvents);
+router.get('/:id', verifyToken, eventController.getEventById);
+router.post('', verifyToken, upload.single('eventImage'), eventController.createEvent);
+router.put('/:id', verifyToken,  upload.single('eventImage'), eventController.updateEvent);
+router.delete('/:id', verifyToken, eventController.deleteEvent);
 
 export default router;
 
